# dataforge-ai

./: .env.example  .gitignore  .plan.md  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  SECURITY.md  index.html  main.py  pyproject.toml
.github/: pull_request_template.md
assets/: NewsView-BsUV45Ja.css  NewsView-C-dxqBUL.js  NewsView-CLu20hIA.js  NewsView-DCL-umFe.js  NewsView-DvEfnQwW.css  NewsView-Ua9Y32uW.js  NewsView-h9L9pT4D.js  PublicationsView-BEam0-js.js  PublicationsView-BPLlNDeV.js  PublicationsView-BUGtb9Wh.js  PublicationsView-CqS9hKZ6.css  PublicationsView-DFTJtlJ0.js  PublicationsView-DgZbxAzn.js  ResearchView-BqRm40eF.js  ResearchView-Ci7GZ4Hs.js  ResearchView-D1KmEYQJ.css  ResearchView-DGLMxGtO.js  ResearchView-DwcSNC1M.js  ResearchView-RPiyuUtE.css  ResearchView-jehX5XxJ.js  ResourcesView-ADr4G5Tu.js  ResourcesView-C-AznaRT.js  ResourcesView-CDjdfjfR.js  ResourcesView-CimKnNCL.css  ResourcesView-CwyXc7Ey.css  ResourcesView-D3K2Cl0M.js  ResourcesView-LiFmoIJu.js  TeamView-BGb5ZeCK.css  TeamView-BtXtZTAb.js  TeamView-C-P-A6UG.js  TeamView-C2n4fB_E.js  TeamView-CEqnmxNW.js  TeamView-FCQZd3JF.js  TeamView-pwqHfcNe.css  index-3bnsVLuT.css  index-BREPzUQA.js  index-BUOeCD6H.css  index-Bv9eS9PZ.css  index-Cbcj3XoX.js  index-CtP7kOD7.css  (+4 more)
scripts/: generate_paper_roadmap_ppt.py  run_exp1_clean_vllm_suite.sh  summarize_current_experiments.py
syneval/: __init__.py
tests/: conftest.py  test_assessment_normalizer.py  test_assessment_reporter.py  test_assessment_runner.py  test_assessment_schema.py  (+55 more)
(+114 files in other folders)
