[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataforge"
version = "1.0.0"
description = "High-concurrency end-to-end data synthesis and curation middleware for the LLM era"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "aiofiles>=23.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
rag-parse = [
    "PyMuPDF>=1.23",
    "python-docx>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]
distributed = [
    "redis[hiredis]>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=5.0",
]

[project.scripts]
dataforge = "dataforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dataforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_return_any = true
files = ["src/dataforge"]

[tool.coverage.run]
source = ["src/dataforge"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85
